5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4081/executions/1578_996.log
== TEST (2019-03-11 19:45:41) 
-- CODE:
print(" ***** ")
print("* o o * ")
print( "  ^  ")
print( " ___ ")
print( "*****")
-- OUTPUT:
***** 
* o o * 
  ^  
 ___ 
*****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 19:46:26) 
-- CODE:
print( "*****" )
print("* o o * )
print( "  ^  ")
print( " ___ ")
print( "*****")
	
-- EXECUTION TIME:
0.152242
-- ERROR:
  File "/home/codebench/codes/1578/996/main.py", line 2
    print("* o o * )
                   ^
SyntaxError: EOL while scanning string literal

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 19:46:58) 
-- CODE:
print( " ***** ")
print("*  o o * )
print( "   ^  " )
print( "  ___ " )
print( " ***** ")
	
-- ERROR:
File "XXXX", line 2
    print("*  o o * )
                    ^
SyntaxError: EOL while scanning string literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 19:47:37) 
-- CODE:
print( " ***** ")
print("* o o * )
print( "  ^  " )
print( "  --- " )
print( " ***** ")
	
-- ERROR:
File "XXXX", line 2
    print("* o o * )
                   ^
SyntaxError: EOL while scanning string literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 19:48:00) 
-- CODE:
print( " ***** ")
print("* o o * " )
print( "  ^  " )
print( "  --- " )
print( " ***** ")
	
-- OUTPUT:
***** 
* o o * 
  ^  
  --- 
 *****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 19:48:10) 
-- CODE:
print( " ***** ")
print("* o o * " )
print( "  ^  " )
print( " --- " )
print( "***** ")
	
-- EXECUTION TIME:
0.191362
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
*  ^  *
* --- *
*****
---- user output:
***** 
* o o * 
  ^  
 --- 
*****
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 19:48:53) 
-- CODE:
print(" ***** ")
print("* o o * ")
print("  ^  ")
print(" --- ")
print(" ***** ")
	
-- OUTPUT:
***** 
* o o * 
  ^  
 --- 
 *****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 19:49:25) 
-- CODE:
print(" ***** ")
print("* o o * ")
print("  ^  ")
print(" --- ")
print(" ***** ")
	
-- OUTPUT:
***** 
* o o * 
  ^  
 --- 
 *****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 19:49:53) 
-- CODE:
print(" ***** ")
print("* o o *")
print("  ^  ")
print(" --- ")
print("*****")
	
-- OUTPUT:
***** 
* o o *
  ^  
 --- 
*****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 19:50:04) 
-- CODE:
print("*****")
print("* o o *")
print("  ^  ")
print(" --- ")
print("*****")
	
-- OUTPUT:
*****
* o o *
  ^  
 --- 
*****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 19:51:47) 
-- CODE:
print   *****
print (* o o *)
print  *  ^  *
print  * --- *
print   *****
	
-- ERROR:
File "XXXX", line 1
    print   *****
               ^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(*****)?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 19:53:29) 
-- CODE:
print  ("*****")
print ("* o o *")
print ("*  ^  *")
print ("* --- *")
print  ("*****")
	
-- OUTPUT:
*****
* o o *
*  ^  *
* --- *
*****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 19:53:42) 
-- CODE:
print  ("*****")
print ("* o o *")
print ("*  ^  *")
print ("* --- *")
print  ("*****")
	
-- OUTPUT:
*****
* o o *
*  ^  *
* --- *
*****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 19:54:03) 
-- CODE:
print  ("  *****  ")
print ("* o o *")
print ("*  ^  *")
print ("* --- *")
print  ("*****")
	
-- OUTPUT:
*****  
* o o *
*  ^  *
* --- *
*****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 19:54:11) 
-- CODE:
print  ("  *****  ")
print ("* o o *")
print ("*  ^  *")
print ("* --- *")
print  ("  *****  ")
	
-- OUTPUT:
*****  
* o o *
*  ^  *
* --- *
  *****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 19:54:25) 
-- CODE:
print  (" *****  ")
print ("* o o *")
print ("*  ^  *")
print ("* --- *")
print  (" ***** ")
	
-- OUTPUT:
*****  
* o o *
*  ^  *
* --- *
 *****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 19:54:47) 
-- CODE:
print  (" ***** ")
print ("(* o o *)")
print ("*  ^  *")
print ("* --- *")
print  (" ***** ")
	
-- OUTPUT:
***** 
(* o o *)
*  ^  *
* --- *
 *****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 19:55:16) 
-- CODE:
print  (" ***** ")
print ("(* o o *)")
print (" *  ^  *")
print (" * --- *")
print  (" ***** ")
	
-- OUTPUT:
***** 
(* o o *)
 *  ^  *
 * --- *
 *****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 19:55:21) 
-- CODE:
print  (" ***** ")
print ("(* o o *)")
print (" *  ^  *")
print (" * --- *")
print  ("  ***** ")
	
-- OUTPUT:
***** 
(* o o *)
 *  ^  *
 * --- *
  *****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 19:55:27) 
-- CODE:
print  ("  ***** ")
print ("(* o o *)")
print (" *  ^  *")
print (" * --- *")
print  ("  ***** ")
	
-- OUTPUT:
***** 
(* o o *)
 *  ^  *
 * --- *
  *****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 19:55:54) 
-- CODE:
print  ("  *****  ")
print ("(* o o *)")
print (" *  ^  *")
print (" * --- *")
print  ("  *****  ")
	
-- OUTPUT:
*****  
(* o o *)
 *  ^  *
 * --- *
  *****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 19:55:59) 
-- CODE:
print  ("  *****  ")
print ("(* o o *)")
print (" *  ^  *")
print (" * --- *")
print  ("  *****  ")
	
-- EXECUTION TIME:
0.138899
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
*  ^  *
* --- *
*****
---- user output:
*****  
(* o o *)
 *  ^  *
 * --- *
  *****
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
